# obzenflow

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  LICENSE-APACHE  NOTICE  README.md  deny.toml
crates/obzenflow_adapters/: Cargo.toml  DCO.md  LICENSE-APACHE  README.md
crates/obzenflow_adapters/examples/: dangerous_examples.rs  http_pull_decoders.rs  layered_middleware_simple.rs  test_circuit_breaker.rs  test_middleware_context.rs
crates/obzenflow_adapters/src/: lib.rs
crates/obzenflow_adapters/src/ai/: error_mapping.rs  map_reduce_chunk.rs  mod.rs  retry.rs
crates/obzenflow_adapters/src/effects/: guarded.rs  mod.rs
crates/obzenflow_adapters/src/middleware/: README.md  backpressure.rs  carrier.rs  circuit_breaker.rs  common.rs  context.rs  context_keys.rs  control_requirements.rs  dangerous_examples.rs  effect_policy.rs  event_handler_builder.rs  factory_tests.rs  flow_boundary.rs  flow_metrics_registry.rs  flow_observer.rs  function.rs  helpers_event_handler.rs  hints.rs  join_middleware.rs  logging_middleware.rs  middleware_event_handler.rs  middleware_factory.rs  middleware_safety.rs  middleware_trait.rs  mod.rs  monitoring.rs  outcome_enrichment.rs  rate_limiter.rs  retry.rs  safety_validation.rs  sink_middleware.rs  sink_policy.rs  (+8 more)
crates/obzenflow_adapters/tests/: breaker_builder_compile_fail_tests.rs  effect_recovery_compile_fail_tests.rs  factory_tests.rs  flowip_115h_compile_fail_tests.rs  materialization_authority_tests.rs  retired_synthesis_docs_tests.rs  test_flow_correlation.rs
crates/obzenflow_benchmarks/: Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
crates/obzenflow_benchmarks/src/: lib.rs
crates/obzenflow_benchmarks/tests/: memory_journals_flow_smoke.rs
crates/obzenflow_core/: Cargo.toml  NOTICE  README.md
crates/obzenflow_core/src/: build_info.rs  circuit_breaker_contract_registry.rs  circuit_breaker_registry.rs  contracts.rs  control_middleware.rs  error.rs  ingress.rs  lib.rs  observer_middleware.rs
crates/obzenflow_core/tests/: composite_api_contract.rs  contracts_transport.rs  control_events.rs  cycle_state_propagation_test.rs  effect_outcome_compile_fail_tests.rs  lineage_propagation_test.rs  processing_status_error_kind_test.rs  retired_effect_synthesis_docs_tests.rs  retry_lifecycle_compatibility.rs
crates/obzenflow_derive/: CONTRIBUTING.md  Cargo.toml  README.md
crates/obzenflow_derive/src/: lib.rs  stage_output.rs
crates/obzenflow_dsl/: Cargo.toml  README.md
crates/obzenflow_dsl/src/: lib.rs  middleware_resolution.rs  prelude.rs  stage_handle_adapter.rs
crates/obzenflow_dsl/tests/: no_serde_value_in_dsl_slots.rs
crates/obzenflow_dsl_infra/: Cargo.toml  README.md
crates/obzenflow_dsl_infra/src/: lib.rs  middleware_resolution.rs  prelude.rs  stage_handle_adapter.rs
crates/obzenflow_fsm/: Cargo.toml  README.md
crates/obzenflow_fsm/examples/: simple_fsm.rs
crates/obzenflow_fsm/src/: async_fsm_design.md  builder.rs  lib.rs  test_compile_safety.rs  test_comprehensive.rs  test_edge_cases.rs  test_simple.rs  types.rs  unholy_fsm_tests.rs
crates/obzenflow_fsm/tests/: unholy_fsm_tests.rs
crates/obzenflow_infra/: Cargo.toml  README.md
crates/obzenflow_infra/src/: env.rs  lib.rs  test_support.rs
crates/obzenflow_infra/tests/: ancestry_fan_in_join.rs  bootstrap_verb_archive_guard_test.rs  contract_state_alignment_test.rs  debug_disk_journal.rs  flowip_063e_fan_out.rs  flowip_063e_hung_handler_cancel.rs  flowip_063e_join_fan_in.rs  flowip_063e_slow_but_healthy.rs  flowip_063e_stalled_transition.rs  flowip_071h_fan_in_ancestry_join.rs  flowip_084g_live_reference_join.rs  http_ingestion_e2e.rs  journal_integration.rs  journal_parity.rs  live_reference_join.rs  liveness_fan_out.rs  liveness_hung_handler_cancel.rs  liveness_join_fan_in.rs  liveness_slow_but_healthy.rs  liveness_stalled_transition.rs  metrics_integration.rs  middleware_topology_slot_collision_test.rs  no_topology_dto_drift.rs  observer_evidence_journal_test.rs  replay_archive_test.rs  replay_determinism.rs  resume_catch_up_failure_test.rs  resume_effect_suppression_test.rs  resume_interrupted_catch_up_test.rs  resume_linear_flow_test.rs  resume_mixed_sources_test.rs  resume_multi_source_test.rs  resume_of_resume_test.rs  run_substrate_capability_test.rs  seq_ordered_fan_in_test.rs  stateful_emit_interval.rs  stateful_patterns_test.rs  stateful_primitives_test.rs  stateless_simple_test.rs  topology_wiring.rs
crates/obzenflow_runtime/: Cargo.toml  README.md
crates/obzenflow_runtime/src/: backpressure.rs  bootstrap.rs  contracts.rs  control_plane.rs  effects.rs  execution.rs  feed_plan.rs  id_conversions.rs  journal.rs  lib.rs  observer_ports.rs  replay.rs  run_context.rs  runtime_resource_limits.rs  typing.rs
crates/obzenflow_runtime/tests/: backpressure_bypass_tests.rs  backpressure_quiescence_predicate_tests.rs  backpressure_registry_tests.rs  effect_compile_fail_tests.rs  fan_out_group_compile_fail_tests.rs  flowip_105h_cancel_mode_metrics_shutdown_test.rs  flowip_114n_ui_tests.rs  no_composite_runtime_facade.rs  no_studio_vocabulary_in_runtime.rs  order_insensitive_compile_fail_tests.rs  pipeline_cancel_mode_metrics_shutdown_tests.rs  replay_driver_tests.rs  retired_effect_synthesis_docs_tests.rs  trace_invariant_compile_fail_tests.rs
crates/obzenflow_runtime_services/: Cargo.toml  NOTICE  README.md
crates/obzenflow_runtime_services/src/: backpressure.rs  contracts.rs  errors.rs  factory.rs  id_conversions.rs  journal.rs  lib.rs  message_bus.rs  replay.rs  runtime_resource_limits.rs  supervisor.rs
crates/obzenflow_runtime_services/tests/: backpressure_bypass_tests.rs  backpressure_quiescence_predicate_tests.rs  backpressure_registry_tests.rs  replay_driver_tests.rs
crates/obzenflow_sketches/: Cargo.toml  README.md
crates/obzenflow_sketches/src/: hash.rs  lib.rs  snapshot.rs  traits.rs
crates/obzenflow_topology_services/: Cargo.toml
crates/obzenflow_topology_services/src/: lib.rs
crates/obzenflow_topology_services/tests/: topology_edge_cases.rs  topology_validation_tests.rs
(+1493 files in other folders)
