[package]
name = "obzenflow"
version = "0.1.0"
edition = "2021"
description = "High-performance event streaming and processing framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/obzenflow"
keywords = ["event-streaming", "event-sourcing", "async", "pipeline"]
categories = ["asynchronous", "data-structures"]

[workspace]
members = ["crates/*"]
# Build all workspace members by default (excluding the root package)
# Note: obzenflow_benchmarks is excluded from default-members as it's only for benchmarking
default-members = [
    "crates/obzenflow_core",
    "crates/obzenflow_topology_services",
    "crates/obzenflow_runtime_services",
    "crates/obzenflow_adapters",
    "crates/obzenflow_dsl_infra",
    "crates/obzenflow_infra"
]

[dependencies]
# Internal workspace dependencies
obzenflow_core = { path = "crates/obzenflow_core" }
obzenflow_topology_services = { path = "crates/obzenflow_topology_services" }
obzenflow_runtime_services = { path = "crates/obzenflow_runtime_services" }
obzenflow_adapters = { path = "crates/obzenflow_adapters" }
obzenflow_dsl_infra = { path = "crates/obzenflow_dsl_infra" }
obzenflow_infra = { path = "crates/obzenflow_infra" }

# Re-export some commonly needed dependencies
tokio = { version = "1", features = ["full"] }
async-trait = { version = "0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { version = "1.0" }

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
proptest = "1.0"
criterion = { version = "0.5", features = ["async_tokio"] }
fastrand = "2.0"
sysinfo = "0.29"
tempfile = "3.8"
futures = "0.3"

# Features removed - using workspace structure for separation of concerns

[profile.release]
lto = true
codegen-units = 1

# Benchmarks have been moved to crates/obzenflow_benchmarks
# Run benchmarks with: cargo bench -p obzenflow_benchmarks

[[example]]
name = "flight_delays"
path = "examples/flight_delays.rs"

[[example]]
name = "char_transform"
path = "examples/char_transform.rs"

[[example]]
name = "crypto_market_prometheus"
path = "examples/crypto_market_prometheus.rs"

[[example]]
name = "flow_monitoring_demo"
path = "examples/flow_monitoring_demo.rs"

[[example]]
name = "news_to_script"
path = "examples/news_to_script.rs"

[[example]]
name = "circuit_breaker_simple_example"
path = "examples/circuit_breaker_simple_example.rs"

[[example]]
name = "rate_limiting"
path = "examples/rate_limiting.rs"

[[example]]
name = "payment_gateway_resilience_example"
path = "examples/payment_gateway_resilience_example.rs"
