[package]
name = "obzenflow"
version = "0.1.0"
edition = "2021"
description = "High-performance event streaming and processing framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/obzenflow/obzenflow"
keywords = ["event-streaming", "event-sourcing", "async", "pipeline"]

[workspace]
members = ["crates/*"]
# Build all workspace members by default (excluding the root package)
# Note: obzenflow_benchmarks is excluded from default-members as it's only for benchmarking
default-members = [
    "crates/obzenflow_core",
    "crates/obzenflow_runtime_services",
    "crates/obzenflow_adapters",
    "crates/obzenflow_dsl_infra",
    "crates/obzenflow_infra"
]

[dependencies]
# Internal workspace dependencies
obzenflow_core = { path = "crates/obzenflow_core" }
obzenflow-topology = { path = "../obzenflow-topology", version = "0.2" }
obzenflow_runtime_services = { path = "crates/obzenflow_runtime_services" }
obzenflow_adapters = { path = "crates/obzenflow_adapters" }
obzenflow_dsl_infra = { path = "crates/obzenflow_dsl_infra" }
obzenflow_infra = { path = "crates/obzenflow_infra" }

# Re-export some commonly needed dependencies
tokio = { version = "1", features = ["full", "tracing"] }
async-trait = { version = "0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { version = "1.0" }
console-subscriber = { version = "0.5", optional = true }

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
proptest = "1.0"
criterion = { version = "0.5", features = ["async_tokio"] }
fastrand = "2.0"
sysinfo = "0.29"
tempfile = "3.8"
futures = "0.3"

[features]
console = ["obzenflow_infra/console", "dep:console-subscriber"]
http-pull = ["obzenflow_infra/reqwest-client"]

[profile.release]
lto = true
codegen-units = 1

# Benchmarks have been moved to crates/obzenflow_benchmarks
# Run benchmarks with: cargo bench -p obzenflow_benchmarks

[[example]]
name = "flight_delays_simple"
path = "examples/flight_delays_simple.rs"

[[example]]
name = "char_transform"
path = "examples/char_transform.rs"

[[example]]
name = "flow_middleware_config"
path = "examples/flow_middleware_config.rs"

[[example]]
name = "product_catalog_enrichment"
path = "examples/product_catalog_enrichment/main.rs"

[[example]]
name = "csv_demo_support_sla"
path = "examples/csv_demo_support_sla/main.rs"

[[example]]
name = "payment_gateway_resilience"
path = "examples/payment_gateway_resilience/main.rs"

[[example]]
name = "hn_ingestion_demo"
path = "examples/hn_ingestion_demo/main.rs"
