[package]
name = "obzenflow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "High-performance event streaming and processing framework"
license.workspace = true
repository.workspace = true
keywords = ["event-streaming", "event-sourcing", "async", "pipeline"]
publish = true

[workspace]
resolver = "2"
members = ["crates/*"]
# Build all workspace members by default (excluding the root package)
# Note: obzenflow_benchmarks is excluded from default-members as it's only for benchmarking
default-members = [
    "crates/obzenflow_core",
    "crates/obzenflow_runtime",
    "crates/obzenflow_adapters",
    "crates/obzenflow_dsl",
    "crates/obzenflow_infra"
]

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.93.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/obzenflow/obzenflow"
homepage = "https://obzenflow.dev"

[workspace.dependencies]
# Workspace crates
obzenflow_core = { version = "0.1.2", path = "crates/obzenflow_core" }
obzenflow_runtime = { version = "0.1.2", path = "crates/obzenflow_runtime" }
obzenflow_adapters = { version = "0.1.2", path = "crates/obzenflow_adapters" }
obzenflow_dsl = { version = "0.1.2", path = "crates/obzenflow_dsl" }
obzenflow_infra = { version = "0.1.2", path = "crates/obzenflow_infra" }
obzenflow_benchmarks = { version = "0.1.2", path = "crates/obzenflow_benchmarks" }
obzenflow_sketches = { version = "0.1.2", path = "crates/obzenflow_sketches" }

# External ObzenFlow crates
obzenflow-topology = "0.3"
obzenflow-fsm = "0.3.1"

# Async/runtime + utilities
tokio = "1"
tokio-test = "0.4"
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console-subscriber = "0.5"

# Serialization / IDs / time
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Errors
thiserror = "1"
anyhow = "1"

# Core types
url = "2"
http = "1"
bytes = "1.11.1"

# Data structures
indexmap = "2"

# Metrics / profiling
hdrhistogram = "7.5"

# Randomness / system
rand = "0.8"
sysinfo = "0.29"

# I/O and formats
csv = "1"

# Security / hashing
crc32fast = "1.3"
ring = "0.17"
subtle = "2"

# Web / networking (optional in crates that use them)
warp = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "rustls-tls-native-roots", "system-proxy"] }
rustls-native-certs = "0.8"

# Benchmarking / testing
criterion = "0.5"
proptest = "1.0"
fastrand = "2.0"
tempfile = "3.8"
libc = "0.2"
clap = { version = "4.5", features = ["derive"] }

[dependencies]
# Internal workspace dependencies
obzenflow_core = { workspace = true }
obzenflow_runtime = { workspace = true }
obzenflow_adapters = { workspace = true }
obzenflow_dsl = { workspace = true }
obzenflow_infra = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
# Used by examples/tests/benchmarks in this crate
tokio = { workspace = true, features = ["full", "tracing"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
obzenflow-topology = { workspace = true }

tokio-test = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }
fastrand = { workspace = true }
sysinfo = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }

[features]
console = ["obzenflow_infra/console"]
http-pull = ["obzenflow_infra/reqwest-client"]
ai-rig = ["obzenflow_infra/ai-rig"]
ai-tiktoken = ["obzenflow_infra/ai-tiktoken"]

[profile.release]
lto = true
codegen-units = 1

# Benchmarks have been moved to crates/obzenflow_benchmarks
# Run benchmarks with: cargo bench -p obzenflow_benchmarks

[[example]]
name = "flight_delays_simple"
path = "examples/flight_delays_simple.rs"

[[example]]
name = "char_transform"
path = "examples/char_transform.rs"

[[example]]
name = "flow_middleware_config"
path = "examples/flow_middleware_config.rs"

[[example]]
name = "product_catalog_enrichment"
path = "examples/product_catalog_enrichment/main.rs"

[[example]]
name = "csv_demo_support_sla"
path = "examples/csv_demo_support_sla/main.rs"

[[example]]
name = "payment_gateway_resilience"
path = "examples/payment_gateway_resilience/main.rs"

[[example]]
name = "hn_ingestion_demo"
path = "examples/hn_ingestion_demo/main.rs"

[[example]]
name = "hn_ai_digest_demo"
path = "examples/hn_ai_digest_demo/main.rs"
required-features = ["ai-rig"]
