[package]
name = "obzenflow_adapters"
description = "Adapters layer for ObzenFlow - interfaces and monitoring"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# Internal dependencies
obzenflow_core = { path = "../obzenflow_core" }
obzenflow-topology = { path = "../../../obzenflow-topology", version = "0.2" }
obzenflow_runtime_services = { path = "../obzenflow_runtime_services" }

# Adapter layer dependencies
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
hdrhistogram = "7.5"
thiserror = "1.0"
ulid = "1.0"
serde_json = "1.0"
anyhow = "1.0"
dashmap = "5.5"

# Optional adapters
prometheus = { version = "0.13", optional = true }
statsd = { version = "0.16", optional = true }
warp = { version = "0.3", optional = true }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }

[features]
default = []
metrics-prometheus = ["prometheus", "warp"]
metrics-statsd = ["statsd"]

[dev-dependencies]
chrono = "0.4"
tracing-subscriber = "0.3"
