[package]
name = "obzenflow_adapters"
description = "Adapters layer for ObzenFlow - interfaces and monitoring"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Internal dependencies
obzenflow_core = { workspace = true }
obzenflow_runtime = { workspace = true }

# Adapter layer dependencies
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
csv = { workspace = true }

[features]
default = []
metrics-otel = []
metrics-statsd = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
chrono = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
