[package]
name = "obzenflow_benchmarks"
description = "Performance benchmarks for ObzenFlow event streaming framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# ObzenFlow dependencies - we need all layers for integration benchmarks
obzenflow_core = { workspace = true }
obzenflow_runtime_services = { workspace = true }
obzenflow_adapters = { workspace = true }
obzenflow_dsl_infra = { workspace = true }
obzenflow_infra = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

# Benchmarking
criterion = { workspace = true, features = ["async_tokio", "html_reports"] }

# Data structures and serialization
serde_json = { workspace = true }

# Utilities
tempfile = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }

# System information for CPU usage benchmarks
sysinfo = { workspace = true }

[dev-dependencies]
# Additional test utilities
futures = { workspace = true }
fastrand = { workspace = true }
obzenflow-topology = { workspace = true }
tracing = { workspace = true }

# Latency benchmarks
[[bench]]
name = "per_event_latency_1_stage"
path = "benches/latency/per_event_latency_1_stage.rs"
harness = false

[[bench]]
name = "per_event_latency_2_stage"
path = "benches/latency/per_event_latency_2_stage.rs"
harness = false

[[bench]]
name = "per_event_latency_3_stage"
path = "benches/latency/per_event_latency_3_stage.rs"
harness = false

[[bench]]
name = "per_event_latency_4_stage"
path = "benches/latency/per_event_latency_4_stage.rs"
harness = false

[[bench]]
name = "per_event_latency_5_stage"
path = "benches/latency/per_event_latency_5_stage.rs"
harness = false

[[bench]]
name = "per_event_latency_20_stage"
path = "benches/latency/per_event_latency_20_stage.rs"
harness = false

[[bench]]
name = "per_event_latency_100_stage"
path = "benches/latency/per_event_latency_100_stage.rs"
harness = false

[[bench]]
name = "per_event_latency_100_stage_memory"
path = "benches/latency/per_event_latency_100_stage_memory.rs"
harness = false

# Throughput benchmarks
[[bench]]
name = "pipeline_throughput"
path = "benches/throughput/pipeline_throughput.rs"
harness = false

# Runtime benchmarks
[[bench]]
name = "idle_cpu_usage"
path = "benches/runtime/idle_cpu_usage.rs"
harness = false

[[bench]]
name = "waiting_for_gun_cpu_usage"
path = "benches/runtime/waiting_for_gun_cpu_usage.rs"
harness = false

[[bench]]
name = "tokio_worker_3_stage_experiment"
path = "benches/runtime/tokio_worker_3_stage_experiment.rs"
harness = false

# Integration benchmarks
[[bench]]
name = "pipeline_execution"
path = "benches/integration/pipeline_execution.rs"
harness = false
