[package]
name = "obzenflow_core"
description = "Core domain layer for ObzenFlow - pure abstractions with minimal dependencies"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Core domain dependencies - minimal
ulid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
