[package]
name = "obzenflow_derive"
description = "Derive macros for ObzenFlow - effect outcome carriers via #[derive(EffectOutcomeFacts)]"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
