[package]
name = "obzenflow_derive"
description = "Derive macros for ObzenFlow - effect outcome carriers via #[derive(EffectOutcomeFacts)]"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
# FLOWIP-095l: the `full` feature provides `ItemImpl` for the `#[trace_invariant]`
# attribute macro, which rewrites a handler impl block.
syn = { workspace = true, features = ["full"] }
