[package]
name = "obzenflow_dsl_infra"
description = "DSL and infrastructure layer for ObzenFlow - flow! macro and high-level orchestration"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# Internal dependencies - all layers needed for DSL
obzenflow_core = { path = "../obzenflow_core" }
obzenflow-topology = { path = "../../../obzenflow-topology" }
obzenflow_runtime_services = { path = "../obzenflow_runtime_services" }
obzenflow_adapters = { path = "../obzenflow_adapters" }

# Core dependencies
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
indexmap = "2.0"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
