[package]
name = "obzenflow_fsm"
version = "0.1.0"
edition = "2021"
description = "Async-first Finite State Machine library inspired by Akka FSM"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies only - no dependencies on other obzenflow crates
async-trait = "0.1"
tokio = { version = "1.35", features = ["rt", "macros", "time"] }
tracing = "0.1"
thiserror = "2.0"
futures = "0.3"

# For the builder pattern and type safety
pin-project = "1.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
tracing-subscriber = "0.3"
rand = "0.8"