[package]
name = "obzenflow_infra"
version = "0.1.0"
edition = "2021"
description = "Infrastructure layer for ObzenFlow - persistence and external integrations"

[dependencies]
# Internal dependencies - depends on all layers
obzenflow_core = { path = "../obzenflow_core" }
obzenflow_topology_services = { path = "../obzenflow_topology_services" }
obzenflow_runtime_services = { path = "../obzenflow_runtime_services" }
obzenflow_adapters = { path = "../obzenflow_adapters" }

# Infrastructure dependencies
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

# Monitoring backends
prometheus = { version = "0.13", optional = true }
statsd = { version = "0.16", optional = true }

[features]
default = []
prometheus = ["dep:prometheus"]
statsd = ["dep:statsd"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
obzenflow_dsl_infra = { path = "../obzenflow_dsl_infra" }