[package]
name = "obzenflow_infra"
description = "Infrastructure layer for ObzenFlow - persistence and external integrations"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# Internal dependencies - depends on all layers
obzenflow_core = { path = "../obzenflow_core" }
obzenflow-topology = { path = "../../../obzenflow-topology", version = "0.2" }
obzenflow_runtime_services = { path = "../obzenflow_runtime_services" }
obzenflow_adapters = { path = "../obzenflow_adapters" }
obzenflow_dsl_infra = { path = "../obzenflow_dsl_infra" }

# Infrastructure dependencies
tokio = { version = "1", features = ["full", "tracing"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
crc32fast = "1.3"
ring = "0.17"
subtle = "2"

# Monitoring backends
prometheus = { version = "0.13", optional = true }
statsd = { version = "0.16", optional = true }

# Web frameworks (optional)
warp = { version = "0.3", optional = true }
bytes = { version = "1.5", optional = true }
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
hyper = { version = "1.0", optional = true }
tokio-stream = { version = "0.1", optional = true }

# Tokio-console for debugging (optional)
console-subscriber = { version = "0.5", optional = true }

# HTTP client implementations (optional)
reqwest = { version = "0.12", features = ["rustls-tls"], optional = true }

[features]
default = []
prometheus = ["dep:prometheus"]
statsd = ["dep:statsd"]
warp-server = ["dep:warp", "dep:bytes", "dep:tokio-stream"]
axum-server = ["dep:axum", "dep:tower", "dep:hyper"]
console = ["dep:console-subscriber"]
reqwest-client = ["dep:reqwest"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
obzenflow-fsm = { path = "../../../obzenflow-fsm", version = "0.3.0" }
