[package]
name = "obzenflow_infra"
description = "Infrastructure layer for ObzenFlow - persistence and external integrations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Internal dependencies - depends on all layers
obzenflow_core = { workspace = true }
obzenflow-topology = { workspace = true }
obzenflow_runtime_services = { workspace = true }
obzenflow_adapters = { workspace = true }
obzenflow_dsl_infra = { workspace = true }

# Infrastructure dependencies
tokio = { workspace = true, features = ["full", "tracing"] }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
crc32fast = { workspace = true }
ring = { workspace = true }
subtle = { workspace = true }
url = { workspace = true }

# Web frameworks (optional)
warp = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }

# Tokio-console for debugging (optional)
console-subscriber = { workspace = true, optional = true }

# HTTP client implementations (optional)
reqwest = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }

# AI provider substrate (optional)
rig_rs = { package = "rig-core", version = "0.30", default-features = false, optional = true }

[features]
default = []
prometheus = []
warp-server = ["dep:warp", "dep:bytes", "dep:tokio-stream"]
console = ["dep:console-subscriber"]
reqwest-client = ["dep:reqwest", "dep:rustls-native-certs"]
ai-rig = ["reqwest-client", "dep:rig_rs"]

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
obzenflow-fsm = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tokio_unstable)"] }
