[package]
name = "obzenflow_runtime"
description = "Runtime services for ObzenFlow - execution and coordination business logic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[lib]
doctest = false

[features]
test-support = ["tokio/test-util"]

[dependencies]
# Internal dependencies
obzenflow_core = { workspace = true }
obzenflow-topology = { workspace = true }
obzenflow-fsm = { workspace = true }

# Service layer dependencies
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

# External dependencies
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
fastrand = { workspace = true }
hdrhistogram = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
ulid = { workspace = true }
trybuild = { workspace = true }

[[test]]
name = "fan_out_group_compile_fail_tests"
required-features = ["test-support"]
