[package]
name = "obzenflow_runtime_services"
version = "0.1.0"
edition = "2021"
description = "Runtime services for ObzenFlow - execution and coordination business logic"

[dependencies]
# Internal dependencies
obzenflow_core = { path = "../obzenflow_core" }
obzenflow_topology_services = { path = "../obzenflow_topology_services" }
obzenflow_fsm = { path = "../obzenflow_fsm" }

# Service layer dependencies
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
futures = "0.3"

# External dependencies
edfsm = "0.11.0"
ulid = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16"
chrono = "0.4"
thiserror = "1.0"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
