[package]
name = "obzenflow_runtime_services"
description = "Runtime services for ObzenFlow - execution and coordination business logic"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# Internal dependencies
obzenflow_core = { path = "../obzenflow_core" }
obzenflow-topology = { path = "../../../obzenflow-topology" }
obzenflow_fsm = { path = "../obzenflow_fsm" }

# Service layer dependencies
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
futures = "0.3"

# External dependencies
edfsm = "0.11.0"
ulid = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16"
chrono = "0.4"
thiserror = "1.0"
rand = "0.8"
hdrhistogram = "7.5"
reqwest = { version = "0.12", features = ["rustls-tls"] }

[dev-dependencies]
tokio-test = "0.4"
