[package]
name = "obzenflow_sketches"
description = "Deterministic streaming sketches and sketch foundations for ObzenFlow"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
