[package]
name = "obzenflow_sketches"
description = "Deterministic streaming sketches and sketch foundations for ObzenFlow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
