[package]
name = "obzenflow_topology_services"
description = "Topology services for ObzenFlow - flow graph and topology business logic"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# Internal dependencies
obzenflow_core = { path = "../obzenflow_core" }

# Service layer dependencies
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
futures = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
ulid = "1.0"

[dev-dependencies]
tokio-test = "0.4"